<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_favorites"
          android:title="@string/action_favorites"
          android:orderInCategory="1"
          android:icon="@drawable/ic_favorite_border_black_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share_black_24dp"
          android:orderInCategory="2"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_info"
          android:title="@string/action_info"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_explanation"
          android:title="@string/action_explanation"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>